src/App.css
.App {
  text-align: center;
}

.App-logo {
  height: 20vmin;
  pointer-events: none;
  border-radius: 50%;
  border-color: white;
  border-style: solid;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 10s linear;
  }
}

  .App-icon {
    height: 30px;
  }
.App-header {
  background-color: #266ec0;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

h1 {
  color: black;
}
p {
  color: black
}

.grid {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: auto;
  column-gap: 10px;
}

.column {
  background-color: white;
  padding: 10px 20px;
  text-align: center;
  width: 30px 50px 30px;
}

.left, .right {
  width: 25%;
}

.middle {
  width: 50%;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}

